--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="title-section">
@@ -13,21 +16,21 @@
 
     <article class="car-body">
         <h3>List of my TOP 5 CARZ:</h3>
-    
+
         <h4>1. Toyota AE86</h4>
-        <img src="images/AE86.png" alt="number1-car" width="900" height="500">
+        <img id="car-1" src="images/AE86.png" alt="number1-car" width="900" height="500">
 
         <h4>2. BMW M3 GTR</h4>
-        <img src="images/bmw-m3-gtr.png" alt="number1-car" width="850" height="500">
+        <img id="car-2" src="images/bmw-m3-gtr.png" alt="number2-car" width="850" height="500">
 
         <h4>3. Nissan GT-R</h4>
-        <img src="images/nissan-gt-r.png" alt="number1-car" width="850" height="400">
+        <img id="car-3" src="images/nissan-gt-r.png" alt="number3-car" width="850" height="400">
 
         <h4>4. Corvette C3</h4>
-        <img src="images/bmw-m3-gtr.png" alt="number1-car" width="850" height="500">
+        <img id="car-4" src="images/c3.png" alt="number4-car" width="850" height="500">
 
-        <h4>5. BMW M3 GTR</h4>
-        <img src="images/bmw-m3-gtr.png" alt="number1-car" width="850" height="500">
+        <h4>5. Dodge Viper</h4>
+        <img id="car-5" src="images/viper.png" alt="number5-car" width="850" height="500">
     </article>
-</body>
+  </body>
 </html>
