--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <h1 class="title-animation">WELCOME TO THE WORLD OF CARZ</h1>
     </section>
 
+    <audio id="myCarMusic" controls autoplay>
+        <source src="audio/2-05 Supercruiser.mp3" type="audio/mpeg">
+    </audio>
+
+<!-- MAIN CAR LIST -->
+
     <article class="car-body">
         <h3>List of my TOP 5 CARZ:</h3>
 
@@ -32,5 +38,59 @@
         <h4>5. Dodge Viper</h4>
         <img id="car-5" src="images/viper.png" alt="number5-car" width="850" height="500">
     </article>
+
+<!-- SECONDARY CAR IMAGES -->
+
+<!-- AE86 -->
+
+    <div class="other-car hidden" id="other-car1-1">
+        <img src="images/AE86-1.png" alt="AE86-1">
+    </div>
+
+    <div class="other-car hidden" id="other-car1-2">
+        <img src="images/AE86-2.png" alt="AE86-2" width="700" height="500">
+    </div>
+
+<!-- BMW -->
+
+    <div class="other-car hidden" id="other-car2-1">
+        <img src="images/bmw-m3-gtr-1.png" alt="BMW-2">
+    </div>
+
+    <div class="other-car hidden" id="other-car2-2">
+        <img src="images/bmw-m3-gtr-2.png" alt="BMW-2" width="850" height="500">
+    </div>
+
+<!-- Nissan GT-R -->
+
+    <div class="other-car hidden" id="other-car3-1">
+        <img src="images/nissan-gt-r-1.png" alt="GT-R-1" width="1000" height="500">
+    </div>
+
+    <div class="other-car hidden" id="other-car3-2">
+        <img src="images/nissan-gt-r-2.png" alt="GT-R-2" width="1000" height="500">
+    </div>
+
+<!-- Corvette C3 -->
+
+    <div class="other-car hidden" id="other-car4-1">
+        <img src="images/c3-1.webp" alt="C3-1" width="1000" height="300">
+    </div>
+
+    <div class="other-car hidden" id="other-car4-2">
+        <img src="images/c3-2.png" alt="C3-2" width="1000" height="500">
+    </div>
+
+<!-- Dodge Viper -->
+
+    <div class="other-car hidden" id="other-car5-1">
+        <img src="images/viper-1.webp" alt="Viper-1">
+    </div>
+
+    <div class="other-car hidden" id="other-car5-2">
+        <img src="images/viper-2.webp" alt="Viper-2">
+    </div>
+
   </body>
+  <script src="js/main.js"></script>
 </html>
