--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <article class="car-body">
         <h3>List of my TOP 5 CARZ:</h3>
+        <h3>(Click on the CARZ if you can [;)</h3>
 
         <h4>1. Toyota AE86</h4>
         <img id="car-1" src="images/AE86.png" alt="number1-car" width="900" height="500">
